kinda-working JETTO interface

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,11 @@
 #!/bin/make -f
-QLKNN?=..
-QLKNN_SRC?=$(QLKNN)/src
-include $(QLKNN_SRC)/Makefile.inc
+QLKNN_SRC:=$(abspath $(dir $(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST))))
+#MAKEFILE_DIRECTORY := $(dir $(CURRENT_MAKEFILE))
+#ROOT_DIR=..
+#CURRENT_DIRECTORY:=$(shell pwd)
+#mkfile_pathz=$(abspath $(lastword $(MAKEFILE_LIST)))
+#QLKNN_SRC= $(dir $(mkfile_pathz))
+#include $(QLKNN_SRC)/Makefile.inc
 # Directory for math routines
 QLKNN_LIBSRC?=$(QLKNN)/lib/src
 #FUKUSHIMA_DIR?=$(QUALIKIZ_LIBSRC)/fukushima
@@ -10,32 +14,41 @@ QLKNN_LIBSRC?=$(QLKNN)/lib/src
 
 #QLKNN_LIBS=$(FUKUSHIMA)
 
-QLKNN_SRCS=qlknn_primitives.f90 qlknn_disk_io.f90 qlknn_types.f90
+QLKNN_FILES=qlknn_primitives.f90 qlknn_disk_io.f90 qlknn_types.f90
+QLKNN_SRCS=$(QLKNN_FILES:%=$(QLKNN_SRC)/%)
 QLKNN_OBJS=$(QLKNN_SRCS:%f90=%o)
 QLKNN_MODS=$(QLKNN_SRCS:%f90=%mod)
 
 all: qlknn_test
 
 # Qualikiz objects
-qlknn_primitives.o: qlknn_disk_io.mod qlknn_types.mod
-qlknn_disk_io.o: qlknn_types.mod
+$(QLKNN_SRC)/qlknn_primitives.o: $(QLKNN_SRC)/qlknn_disk_io.mod $(QLKNN_SRC)/qlknn_types.mod
+$(QLKNN_SRC)/qlknn_disk_io.o: $(QLKNN_SRC)/qlknn_types.mod
 
 ###############################################################################
-qlknn_test: qlknn_test.f90 $(QLKNN_OBJS)
-	$(FC_PREAMBLE) $(FC_WRAPPER) $(FFLAGS) $(MPI_FLAGS) $(OPENMP_FLAGS) $(QLKNN_OBJS) $(QLKNN_LIBS) qlknn_test.f90 -o $@
+qlknn_test: $(QLKNN_SRC)/qlknn_test.f90 $(QLKNN_OBJS)
+	#$(FC_PREAMBLE) $(FC_WRAPPER) $(FFLAGS) $(MPI_FLAGS) $(OPENMP_FLAGS) $(QLKNN_OBJS) $(QLKNN_LIBS) qlknn_test.f90 -o $@
+	$(FC) $(FFLAGS) $(OPENMP) $(EXTEND) $(IFLAGS) $(QLKNN_OBJS) $(QLKNN_LIBS) -module $(QLKNN_SRC) $< -o $@
+	chmod +x $@
+
+#$(QLKNN_OBJS) :%.o:%.f90
+	#$(FC) $(OPENMP) $(F90FLAGS) -c $<
+	#$(FC_PREAMBLE) $(FC_WRAPPER) $(FFLAGS) $(MPI_FLAGS) $(OPENMP_FLAGS) $(QUALIKIZ_LIBS) -c $<
+
+
+%.mod %.o: %.f90
+	@echo blurgh
+$(QLKNN_MODS):%.mod:%.o
+	@echo balarg
 
 $(QLKNN_OBJS) :%.o:%.f90
-	$(FC_PREAMBLE) $(FC_WRAPPER) $(FFLAGS) $(MPI_FLAGS) $(OPENMP_FLAGS) $(QUALIKIZ_LIBS) -c $<
-
-
-$(QLKNN_MODS):%.mod:%.o
-
+	$(FC) -c $(FFLAGS) $(OPENMP) $(EXTEND) $(IFLAGS) $< -module $(QLKNN_SRC) -o $@
 
 clean:
-	rm -f *.o *.mod *__genmod.f90
+	rm -f $(QLKNN_SRC)/*.o $(QLKNN_SRC)/*.mod $(QLKNN_SRC)/*__genmod.f90
 
 
-distclean: clean
+realclean: clean
 	rm -f QuaLiKiz
 
 
@@ -49,5 +62,6 @@ dump_variables:
 	@echo "QLKNN=$(QLKNN)"
 	@echo "QLKNN_LIBS=$(QLKNN_LIBS)"
 	@echo
+	@echo "QLKNN_OBJS=$(QLKNN_SRCS)"
 	@echo "QLKNN_OBJS=$(QLKNN_OBJS)"
 	@echo "QLKNN_MODS=$(QLKNN_MODS)"
