Source-file based NN import

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,9 @@ QLKNN_SRC:=$(abspath $(dir $(word $(words $(MAKEFILE_LIST)),$(MAKEFILE_LIST))))
 #CURRENT_DIRECTORY:=$(shell pwd)
 #mkfile_pathz=$(abspath $(lastword $(MAKEFILE_LIST)))
 #QLKNN_SRC= $(dir $(mkfile_pathz))
-#include $(QLKNN_SRC)/Makefile.inc
+ifndef JSRCPATH
+	include $(QLKNN_SRC)/Makefile.inc
+endif
 # Directory for math routines
 QLKNN_LIBSRC?=$(QLKNN)/lib/src
 #FUKUSHIMA_DIR?=$(QUALIKIZ_LIBSRC)/fukushima
@@ -14,7 +16,7 @@ QLKNN_LIBSRC?=$(QLKNN)/lib/src
 
 #QLKNN_LIBS=$(FUKUSHIMA)
 
-QLKNN_FILES=qlknn_primitives.f90 qlknn_disk_io.f90 qlknn_types.f90
+QLKNN_FILES=qlknn_primitives.f90 qlknn_disk_io.f90 qlknn_types.f90 efiitg_gb.f90
 QLKNN_SRCS=$(QLKNN_FILES:%=$(QLKNN_SRC)/%)
 QLKNN_OBJS=$(QLKNN_SRCS:%f90=%o)
 QLKNN_MODS=$(QLKNN_SRCS:%f90=%mod)
@@ -22,13 +24,13 @@ QLKNN_MODS=$(QLKNN_SRCS:%f90=%mod)
 all: qlknn_test
 
 # Qualikiz objects
-$(QLKNN_SRC)/qlknn_primitives.o: $(QLKNN_SRC)/qlknn_disk_io.mod $(QLKNN_SRC)/qlknn_types.mod
+$(QLKNN_SRC)/qlknn_primitives.o: $(QLKNN_SRC)/qlknn_disk_io.mod $(QLKNN_SRC)/qlknn_types.mod $(QLKNN_SRC)/efiitg_gb.mod
 $(QLKNN_SRC)/qlknn_disk_io.o: $(QLKNN_SRC)/qlknn_types.mod
 
 ###############################################################################
 qlknn_test: $(QLKNN_SRC)/qlknn_test.f90 $(QLKNN_OBJS)
 	#$(FC_PREAMBLE) $(FC_WRAPPER) $(FFLAGS) $(MPI_FLAGS) $(OPENMP_FLAGS) $(QLKNN_OBJS) $(QLKNN_LIBS) qlknn_test.f90 -o $@
-	$(FC) $(FFLAGS) $(OPENMP) $(EXTEND) $(IFLAGS) $(QLKNN_OBJS) $(QLKNN_LIBS) -module $(QLKNN_SRC) $< -o $@
+	$(FC) $(FFLAGS) $(OPENMP) $(EXTEND) $(IFLAGS) $(QLKNN_OBJS) $(QLKNN_LIBS) $(MODULE_PATH_OPTION) $(QLKNN_SRC) $< -o $@
 	chmod +x $@
 
 #$(QLKNN_OBJS) :%.o:%.f90
@@ -42,10 +44,11 @@ $(QLKNN_MODS):%.mod:%.o
 	@echo balarg
 
 $(QLKNN_OBJS) :%.o:%.f90
-	$(FC) -c $(FFLAGS) $(OPENMP) $(EXTEND) $(IFLAGS) $< -module $(QLKNN_SRC) -o $@
+	$(FC) -c $(FFLAGS) $(OPENMP) $(EXTEND) $(IFLAGS) $< $(MODULE_PATH_OPTION) $(QLKNN_SRC) -o $@
 
 clean:
 	rm -f $(QLKNN_SRC)/*.o $(QLKNN_SRC)/*.mod $(QLKNN_SRC)/*__genmod.f90
+	rm qlknn_test
 
 
 realclean: clean
