--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -7,7 +7,7 @@ FC_WRAPPER=mpifort
 # String of text that will be put in from of the $(FC) compile option
 FC_PREAMBLE=export OMPI_FC=$(FC) && 
 DEBUG=
-FFLAGS_GFORTRAN=$(DEBUG) -O3 -fdefault-double-8 -fdefault-real-8 -ffree-line-length-none
+FFLAGS_GFORTRAN=$(DEBUG) -O3 -fdefault-double-8 -fdefault-real-8 -ffree-line-length-none -flto -ffast-math -fwhole-program
 FFLAGS_IFORT=$(DEBUG) -O2 -real-size 64
 FFLAGS=$(FFLAGS_GFORTRAN)
 OPENMP_FLAGS=-fopenmp
