--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -1,5 +1,6 @@
 #!/bin/make -f
 QUALIKIZ=/home/karel/working/QLKNN-fortran
+MKLROOT=/home/karel/intel/mkl
 # Underlying compiler
 FC=gfortran
 # Wrapper/command used to compile with Open MPI
@@ -13,3 +14,5 @@ FFLAGS=$(FFLAGS_GFORTRAN)
 OPENMP_FLAGS=-fopenmp
 MPI_FLAGS=-DMPI
 MODULE_PATH_OPTION=-L
+INTEL_MKL_LINK=-Wl,--start-group $(MKLROOT)/lib/intel64/libmkl_gf_ilp64.a $(MKLROOT)/lib/intel64/libmkl_sequential.a $(MKLROOT)/lib/intel64/libmkl_core.a -Wl,--end-group -lpthread -lm -ldl
+INTEL_MKL=-I${MKLROOT}/include -I${MKLROOT}/include/intel64/ilp64 -m64 -fdefault-integer-8
